--- a/test/index.html
+++ b/test/index.html
@@ -10,9 +10,7 @@
     </style>
 </head>
 <body >
-<input onselect="(function a() {
-  alert(33)
-})()"/>
+<input onclick = "javascript:void(0)"/>
 <script>
 
 </script>
