--- a/test/index.html
+++ b/test/index.html
@@ -3,15 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        .dome{
-            color: red;
-        }
-    </style>
+
+    <link rel="stylesheet/less" type="text/css" href="index.less" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.5.3/less.min.js"></script>
+
+    <!--<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/monokai-sublime.min.css">-->
+    <!--<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>-->
+    <link rel="stylesheet" href="highlight/styles/tomorrow-night.css">
+    <script src="highlight/highlight.pack.js"></script>
+    <script>
+        hljs.initHighlightingOnLoad();
+        console.log(hljs.listLanguages());
+    </script>
+
 </head>
-<body >
-<input onclick = "javascript:void(0)"/>
+<body>
+<div class="testDiv">436465</div>
+<div class="class1">436465</div>
+<div class="class2">436465</div>
+<pre>
+<code class="ts">
+const a:string = "1";
+</code>
+<code class="less">
+.mixin (@a) when (lightness(@a) >= 50%) {
+  background-color: black;
+}
+.mixin (@a) when (lightness(@a) < 50%) {
+  background-color: white;
+}
+.mixin (@a) {
+  color: @a;
+}
+.class1 { .mixin(#ddd) }
+.class2 { .mixin(#555) }
+</code>
+</pre>
+
 <script>
+//    Array.prototype.slice.call(document.getElementsByTagName('code')).map((item)=>{
+//        hljs.highlightBlock(item);
+//    })
 
 </script>
 </body>
